Revised logs an reverify series