@@ -30,6 +30,7 @@ import org.springframework.web.reactive.function.client.WebClient;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -47,7 +48,6 @@ public class SeriesService {
 
     private final WebClient webClient;
 
-    private final Map<Integer, List<GCDCover>> urlCache = new HashMap<>();
 
     public SeriesService(SeriesRepository seriesRepository, IssueService issueService,
                          ComicVineService comicVineService,
@@ -65,7 +65,6 @@ public class SeriesService {
         this.modelMapper = modelMapper;
         this.progressService = progressService;
         this.cacheManager = cacheManager;
-        urlCache.put(0, new ArrayList<>());
         this.webClient = WebClient.builder()
                 .baseUrl("http://" + infernoComicsConfig.getRecognitionServerHost() + ":" + infernoComicsConfig.getRecognitionServerPort() + "/inferno-comics-recognition/api/v1")
                 .exchangeStrategies(ExchangeStrategies.builder()
@@ -76,15 +75,99 @@ public class SeriesService {
                 .build();
     }
 
-    public List<Series> getAllSeries() {
-        log.info("Fetching all series from database");
+    @CacheEvict(value = "series", key = "#seriesId")
+    @Transactional
+    public Series reverifyMetadata(Long seriesId) {
+        Series series = getSeriesById(seriesId);
+        if (series == null) {
+            throw new IllegalArgumentException("Series with ID " + seriesId + " not found");
+        }
 
+        List<String> originalComicVineIds = new ArrayList<>(series.getComicVineIds() != null ?
+                series.getComicVineIds() : List.of());
+        Integer originalIssueCount = series.getIssueCount();
+
+        log.info("Reverifying metadata for series '{}' (ID: {})", series.getName(), seriesId);
+
+        AtomicInteger totalComics = new AtomicInteger(0);
+        List<String> newGcdIds = new ArrayList<>();
+
+        // Process each Comic Vine ID
+        if (series.getComicVineIds() != null && !series.getComicVineIds().isEmpty()) {
+            for (String comicVineId : series.getComicVineIds()) {
+                try {
+                    ComicVineService.ComicVineSeriesDto dto = comicVineService.getComicVineSeriesById(Long.parseLong(comicVineId));
+
+                    if (dto != null) {
+                        totalComics.addAndGet(dto.getIssueCount() != null ? dto.getIssueCount() : 0);
+
+                        // Try to find GCD mapping
+                        try {
+                            Optional<GCDSeries> gcdSeriesOptional = gcDatabaseService
+                                    .findGCDSeriesWithComicVineSeries(dto.getName(), dto.getStartYear(), dto.getIssueCount());
+
+                            if (gcdSeriesOptional.isPresent()) {
+                                String gcdId = String.valueOf(gcdSeriesOptional.get().getId());
+                                newGcdIds.add(gcdId);
+                                log.debug("✅ Mapped Comic Vine ID {} to GCD ID {}", comicVineId, gcdId);
+                            } else {
+                                log.warn("❌ No GCD mapping found for Comic Vine ID: {}", comicVineId);
+                            }
+                        } catch (Exception e) {
+                            log.error("❌ Error finding GCD mapping for Comic Vine ID {}: {}", comicVineId, e.getMessage());
+                        }
+                    } else {
+                        log.warn("❌ No Comic Vine data found for ID: {}", comicVineId);
+                    }
+                } catch (Exception e) {
+                    log.error("❌ Error processing Comic Vine ID {}: {}", comicVineId, e.getMessage());
+                }
+            }
+        }
+
+        // Update series with new metadata
+        series.setIssueCount(totalComics.get());
+        series.setGcdIds(newGcdIds);
+
+        Series updatedSeries = seriesRepository.save(series);
+
+        // Cache management - evict related caches
+        try {
+            if (!originalComicVineIds.isEmpty()) {
+                evictCacheValue("comic-vine-issues", seriesId.toString());
+            }
+
+            evictListCaches();
+            evictCacheValue("series-stats", "global");
+
+            // Evict search caches if series data changed significantly
+            if (!originalComicVineIds.equals(newGcdIds) || !originalIssueCount.equals(totalComics.get())) {
+                Arrays.asList("series-search", "series-advanced-search").forEach(cacheName -> {
+                    try {
+                        Objects.requireNonNull(cacheManager.getCache(cacheName)).clear();
+                    } catch (Exception e) {
+                        log.warn("Failed to clear search cache {}: {}", cacheName, e.getMessage());
+                    }
+                });
+            }
+
+        } catch (Exception e) {
+            log.warn("Error during cache eviction for series {}: {}", seriesId, e.getMessage());
+        }
+
+        log.info("✅ Reverification complete for '{}': {} issues from {} Comic Vine IDs → {} GCD mappings",
+                updatedSeries.getName(), totalComics.get(), originalComicVineIds.size(), newGcdIds.size());
+
+        return updatedSeries;
+    }
+
+    public List<Series> getAllSeries() {
         // Try to get from cache first
         String cacheKey = "all-series-with-counts";
-        List<Series> cachedSeries = getCachedValue("series-list", cacheKey);
+        List<Series> cachedSeries = getCachedValue(cacheKey);
 
         if (cachedSeries != null) {
-            log.info("Returning cached series list with {} items", cachedSeries.size());
+            log.debug("Returning cached series list with {} items", cachedSeries.size());
             return cachedSeries;
         }
 
@@ -94,7 +177,7 @@ public class SeriesService {
                 series.setIssueCount(issueService.getIssuesBySeriesId(series.getId()).size()));
 
         // Cache the result for 30 minutes
-        putCacheValue("series-list", cacheKey, seriesList);
+        putCacheValue(cacheKey, seriesList);
 
         return seriesList;
     }
@@ -102,7 +185,6 @@ public class SeriesService {
     @Cacheable(value = "series", key = "#id", unless = "#result == null")
     @Transactional(readOnly = true)
     public Series getSeriesById(Long id) {
-        log.info("Fetching series with ID: {}", id);
         return seriesRepository.findByIdWithIssues(id).orElse(null);
     }
 
@@ -113,13 +195,11 @@ public class SeriesService {
 
     @Cacheable(value = "series-search", key = "#query", unless = "#result.isEmpty()")
     public List<Series> searchSeries(String query) {
-        log.info("Searching series with query: {}", query);
         return seriesRepository.findByNameContainingIgnoreCaseOrPublisherContainingIgnoreCase(query, query);
     }
 
     @Cacheable(value = "comic-vine-series", key = "#query", unless = "#result.isEmpty()")
     public List<ComicVineService.ComicVineSeriesDto> searchComicVineSeries(String query) {
-        log.info("Searching Comic Vine series with query: {}", query);
         try {
             return comicVineService.searchSeries(query);
         } catch (Exception e) {
@@ -131,7 +211,6 @@ public class SeriesService {
     // Cache Comic Vine issues search
     @Cacheable(value = "comic-vine-issues", key = "#seriesId", unless = "#result.isEmpty()")
     public List<ComicVineService.ComicVineIssueDto> searchComicVineIssues(Long seriesId) {
-        log.info("Searching Comic Vine issues for series ID: {}", seriesId);
         try {
             Optional<Series> series = seriesRepository.findById(seriesId);
             if (series.isPresent() && series.get().getComicVineId() != null) {
@@ -147,8 +226,6 @@ public class SeriesService {
 
     @Transactional
     public Series createSeries(SeriesController.SeriesCreateRequestDto request) {
-        log.info("Creating series: {}", request.getName());
-
         Series series = this.modelMapper.map(request, Series.class);
 
         // Generate description if not provided
@@ -195,29 +272,22 @@ public class SeriesService {
         series.setGcdIds(gcdIds);
         Series savedSeries = seriesRepository.save(series);
 
-        // Only evict caches that are directly affected
         evictListCaches();
 
-        log.info("Created series with ID: {} (mapped {} GCD IDs)", savedSeries.getId(), gcdIds.size());
+        log.info("Created series '{}' with ID: {} ({} GCD mappings)",
+                savedSeries.getName(), savedSeries.getId(), gcdIds.size());
         return savedSeries;
     }
 
     @CachePut(value = "series", key = "#id", condition = "#result != null")
     @Transactional
     public Series updateSeries(Long id, SeriesUpdateRequest request) {
-        log.info("Updating series with ID: {}", id);
-
         try {
             Series existingSeries = seriesRepository.findById(id)
                     .orElseThrow(() -> new IllegalArgumentException("Series with ID " + id + " not found"));
 
             List<String> originalComicVineIds = new ArrayList<>(existingSeries.getComicVineIds() != null ?
                     existingSeries.getComicVineIds() : List.of());
-            List<String> originalGcdIds = new ArrayList<>(existingSeries.getGcdIds() != null ?
-                    existingSeries.getGcdIds() : List.of());
-
-            log.info("Original Comic Vine IDs: {}", originalComicVineIds);
-            log.info("Original GCD IDs: {}", originalGcdIds);
 
             existingSeries.setName(request.getName());
             existingSeries.setDescription(request.getDescription());
@@ -226,13 +296,10 @@ public class SeriesService {
             existingSeries.setEndYear(request.getEndYear());
             existingSeries.setImageUrl(request.getImageUrl());
 
-            if (request instanceof SeriesController.SeriesUpdateRequestDto) {
-                SeriesController.SeriesUpdateRequestDto dto = (SeriesController.SeriesUpdateRequestDto) request;
+            if (request instanceof SeriesController.SeriesUpdateRequestDto dto) {
 
                 List<String> requestComicVineIds = dto.getComicVineIds() != null ?
                         new ArrayList<>(dto.getComicVineIds()) : new ArrayList<>();
-
-                log.info("Request Comic Vine IDs: {}", requestComicVineIds);
 
                 existingSeries.setComicVineIds(new ArrayList<>(requestComicVineIds));
 
@@ -244,48 +311,32 @@ public class SeriesService {
             List<String> newComicVineIds = existingSeries.getComicVineIds() != null ?
                     new ArrayList<>(existingSeries.getComicVineIds()) : new ArrayList<>();
 
-            log.info("New Comic Vine IDs after manual mapping: {}", newComicVineIds);
-
             if (newComicVineIds.isEmpty()) {
-                log.info("No Comic Vine IDs remaining, clearing primary Comic Vine ID");
                 existingSeries.setComicVineId(null);
             } else if (existingSeries.getComicVineId() == null || !newComicVineIds.contains(existingSeries.getComicVineId())) {
-                String newPrimary = newComicVineIds.get(0);
-                log.info("Updating primary Comic Vine ID from {} to {}", existingSeries.getComicVineId(), newPrimary);
+                String newPrimary = newComicVineIds.getFirst();
                 existingSeries.setComicVineId(newPrimary);
             }
 
             // ALWAYS update GCD mappings when Comic Vine IDs change
             if (!originalComicVineIds.equals(newComicVineIds)) {
-                log.info("Comic Vine IDs changed for series {}: {} -> {}", id, originalComicVineIds, newComicVineIds);
+                log.info("Comic Vine IDs changed for series {}: {} → {} IDs",
+                        id, originalComicVineIds.size(), newComicVineIds.size());
 
                 if (newComicVineIds.isEmpty()) {
-                    // If no Comic Vine IDs left, clear GCD mappings
-                    log.info("No Comic Vine IDs remaining, clearing GCD mappings for series {}", id);
                     existingSeries.setGcdIds(new ArrayList<>());
                 } else {
-                    // Update GCD mappings for remaining Comic Vine IDs
-                    log.info("Updating GCD mappings for {} remaining Comic Vine IDs", newComicVineIds.size());
                     updateGcdMappings(existingSeries, newComicVineIds);
                 }
 
                 // Recalculate metadata if we have Comic Vine associations
                 if (!newComicVineIds.isEmpty()) {
-                    log.info("Recalculating metadata for {} Comic Vine IDs", newComicVineIds.size());
                     recalculateSeriesMetadataFromComicVine(existingSeries, newComicVineIds);
                 }
-            } else {
-                log.info("Comic Vine IDs unchanged, skipping GCD mapping update");
             }
-
-            log.info("Before save - Comic Vine IDs: {}, GCD IDs: {}",
-                    existingSeries.getComicVineIds(), existingSeries.getGcdIds());
 
             // Save the updated series
             Series updatedSeries = seriesRepository.save(existingSeries);
-
-            log.info("After save - Comic Vine IDs: {}, GCD IDs: {}",
-                    updatedSeries.getComicVineIds(), updatedSeries.getGcdIds());
 
             evictListCaches();
             descriptionGeneratorService.evictSeriesCache(updatedSeries);
@@ -294,8 +345,9 @@ public class SeriesService {
                 evictCacheValue("comic-vine-issues", id.toString());
             }
 
-            log.info("Successfully updated series: {} (Comic Vine IDs: {}, GCD IDs: {})",
-                    updatedSeries.getName(), updatedSeries.getComicVineIds(), updatedSeries.getGcdIds());
+            log.info("Updated series '{}': {} Comic Vine IDs, {} GCD mappings",
+                    updatedSeries.getName(), updatedSeries.getComicVineIds().size(),
+                    updatedSeries.getGcdIds().size());
 
             return updatedSeries;
 
@@ -307,17 +359,14 @@ public class SeriesService {
 
     private void updateGcdMappings(Series series, List<String> comicVineIds) {
         try {
-            // Create a completely NEW list to avoid any reference issues
             List<String> newGcdIds = new ArrayList<>();
 
             for (String comicVineId : comicVineIds) {
                 try {
-                    log.info("Processing Comic Vine ID: {}", comicVineId);
-
                     ComicVineService.ComicVineSeriesDto dto = comicVineService.getComicVineSeriesById(Long.valueOf(comicVineId));
 
                     if (dto != null) {
-                        log.info("Found Comic Vine data: name='{}', startYear={}, issueCount={}",
+                        log.debug("Found Comic Vine data: name='{}', startYear={}, issueCount={}",
                                 dto.getName(), dto.getStartYear(), dto.getIssueCount());
 
                         Optional<GCDSeries> gcdSeriesOptional = gcDatabaseService
@@ -326,7 +375,7 @@ public class SeriesService {
                         if (gcdSeriesOptional.isPresent()) {
                             String gcdId = String.valueOf(gcdSeriesOptional.get().getId());
                             newGcdIds.add(gcdId);
-                            log.info("✅ Mapped Comic Vine ID {} to GCD ID {}", comicVineId, gcdId);
+                            log.debug("✅ Mapped Comic Vine ID {} to GCD ID {}", comicVineId, gcdId);
                         } else {
                             log.warn("❌ No GCD mapping found for Comic Vine ID: {}", comicVineId);
                         }
@@ -338,8 +387,6 @@ public class SeriesService {
                     // Continue with other IDs even if one fails
                 }
             }
-
-            log.info("New GCD IDs calculated: {}", newGcdIds);
 
             series.setGcdIds(new ArrayList<>(newGcdIds));
         } catch (Exception e) {
@@ -354,14 +401,11 @@ public class SeriesService {
 
             for (String comicVineId : comicVineIds) {
                 try {
-                    log.info("Fetching metadata for Comic Vine ID: {}", comicVineId);
-
-                    // Use your renamed method
                     ComicVineService.ComicVineSeriesDto dto = comicVineService.getComicVineSeriesById(Long.valueOf(comicVineId));
 
                     if (dto != null) {
                         comicVineData.add(dto);
-                        log.info("✅ Got metadata: name='{}', startYear={}, endYear={}, issueCount={}",
+                        log.debug("✅ Got metadata: name='{}', startYear={}, endYear={}, issueCount={}",
                                 dto.getName(), dto.getStartYear(), dto.getEndYear(), dto.getIssueCount());
                     } else {
                         log.warn("❌ No Comic Vine data found for ID: {}", comicVineId);
@@ -376,23 +420,23 @@ public class SeriesService {
                 return;
             }
 
-            log.info("Successfully fetched {} Comic Vine series data objects", comicVineData.size());
+            log.debug("Successfully fetched {} Comic Vine series data objects", comicVineData.size());
 
             // Recalculate date range
             List<Integer> startYears = comicVineData.stream()
                     .map(ComicVineService.ComicVineSeriesDto::getStartYear)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<Integer> endYears = comicVineData.stream()
                     .map(ComicVineService.ComicVineSeriesDto::getEndYear)
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (!startYears.isEmpty()) {
                 Integer earliestStart = Collections.min(startYears);
                 if (!earliestStart.equals(series.getStartYear())) {
-                    log.info("Updating start year from {} to {}", series.getStartYear(), earliestStart);
+                    log.debug("Updating start year from {} to {}", series.getStartYear(), earliestStart);
                     series.setStartYear(earliestStart);
                 }
             }
@@ -400,7 +444,7 @@ public class SeriesService {
             if (!endYears.isEmpty()) {
                 Integer latestEnd = Collections.max(endYears);
                 if (!latestEnd.equals(series.getEndYear())) {
-                    log.info("Updating end year from {} to {}", series.getEndYear(), latestEnd);
+                    log.debug("Updating end year from {} to {}", series.getEndYear(), latestEnd);
                     series.setEndYear(latestEnd);
                 }
             }
@@ -411,7 +455,7 @@ public class SeriesService {
                     .sum();
 
             if (totalIssueCount != series.getIssueCount()) {
-                log.info("Updating issue count from {} to {}", series.getIssueCount(), totalIssueCount);
+                log.debug("Updating issue count from {} to {}", series.getIssueCount(), totalIssueCount);
                 series.setIssueCount(totalIssueCount);
             }
         } catch (Exception e) {
@@ -422,8 +466,6 @@ public class SeriesService {
     @CacheEvict(value = "series", key = "#id")
     @Transactional
     public void deleteSeries(Long id) {
-        log.info("Deleting series with ID: {}", id);
-
         if (!seriesRepository.existsById(id)) {
             throw new IllegalArgumentException("Series with ID " + id + " not found");
         }
@@ -433,8 +475,6 @@ public class SeriesService {
         series.ifPresent(descriptionGeneratorService::evictSeriesCache);
 
         seriesRepository.deleteById(id);
-
-        // Evict list caches since a series was deleted
         evictListCaches();
 
         log.info("Deleted series with ID: {}", id);
@@ -443,8 +483,6 @@ public class SeriesService {
     // Cache series statistics with proper TTL
     @Cacheable(value = "series-stats", key = "'global'")
     public Map<String, Object> getSeriesStats() {
-        log.info("Calculating series statistics");
-
         List<Series> allSeries = seriesRepository.findAll();
 
         long totalSeries = allSeries.size();
@@ -478,7 +516,6 @@ public class SeriesService {
     // Cache recent series
     @Cacheable(value = "recent-series", key = "#limit")
     public List<Series> getRecentSeries(int limit) {
-        log.info("Fetching {} recent series", limit);
         return seriesRepository.findRecentSeries(limit);
     }
 
@@ -486,7 +523,7 @@ public class SeriesService {
     @Cacheable(value = "series-advanced-search",
             key = "T(java.util.Objects).hash(#publisher, #startYear, #endYear)")
     public List<Series> searchSeriesByPublisherAndYear(String publisher, Integer startYear, Integer endYear) {
-        log.info("Advanced search - Publisher: {}, Start Year: {}, End Year: {}", publisher, startYear, endYear);
+        log.debug("Advanced search - Publisher: {}, Start Year: {}, End Year: {}", publisher, startYear, endYear);
 
         return seriesRepository.findAll().stream()
                 .filter(series -> {
@@ -513,8 +550,6 @@ public class SeriesService {
 
     // Create series from Comic Vine data
     public Series createSeriesFromComicVine(String comicVineId, ComicVineService.ComicVineSeriesDto comicVineData) {
-        log.info("Creating series from Comic Vine data: {}", comicVineData.getName());
-
         Series series = new Series();
         series.setName(comicVineData.getName());
         series.setDescription(comicVineData.getDescription());
@@ -537,11 +572,10 @@ public class SeriesService {
         }
 
         Series savedSeries = seriesRepository.save(series);
-
-        // Evict list caches since new series was added
         evictListCaches();
 
-        log.info("Created series from Comic Vine with ID: {}", savedSeries.getId());
+        log.info("Created series '{}' from Comic Vine with ID: {}",
+                savedSeries.getName(), savedSeries.getId());
         return savedSeries;
     }
 
@@ -586,7 +620,6 @@ public class SeriesService {
                 "comic-vine-issues").forEach(cacheName -> {
             try {
                 Objects.requireNonNull(cacheManager.getCache(cacheName)).clear();
-                log.debug("Cleared cache: {}", cacheName);
             } catch (Exception e) {
                 log.warn("Failed to clear cache {}: {}", cacheName, e.getMessage());
             }
@@ -596,8 +629,6 @@ public class SeriesService {
     // Get popular series (most comic books)
     @Cacheable(value = "popular-series", key = "#limit")
     public List<Series> getPopularSeries(int limit) {
-        log.info("Fetching {} popular series", limit);
-
         return seriesRepository.findAll().stream()
                 .sorted((s1, s2) -> Integer.compare(s2.getIssues().size(), s1.getIssues().size()))
                 .limit(limit)
@@ -610,7 +641,6 @@ public class SeriesService {
                 .forEach(cacheName -> {
                     try {
                         Objects.requireNonNull(cacheManager.getCache(cacheName)).clear();
-                        log.debug("Evicted cache: {}", cacheName);
                     } catch (Exception e) {
                         log.warn("Failed to evict cache {}: {}", cacheName, e.getMessage());
                     }
@@ -619,9 +649,9 @@ public class SeriesService {
 
     // Helper method to get cached values
     @SuppressWarnings("unchecked")
-    private <T> T getCachedValue(String cacheName, String key) {
+    private <T> T getCachedValue(String key) {
         try {
-            var cache = cacheManager.getCache(cacheName);
+            var cache = cacheManager.getCache("series-list");
             if (cache != null) {
                 var wrapper = cache.get(key);
                 if (wrapper != null) {
@@ -629,20 +659,20 @@ public class SeriesService {
                 }
             }
         } catch (Exception e) {
-            log.warn("Failed to get cached value from {} with key {}: {}", cacheName, key, e.getMessage());
+            log.warn("Failed to get cached value from {} with key {}: {}", "series-list", key, e.getMessage());
         }
         return null;
     }
 
     // Helper method to put cached values
-    private void putCacheValue(String cacheName, String key, Object value) {
+    private void putCacheValue(String key, Object value) {
         try {
-            var cache = cacheManager.getCache(cacheName);
+            var cache = cacheManager.getCache("series-list");
             if (cache != null) {
                 cache.put(key, value);
             }
         } catch (Exception e) {
-            log.warn("Failed to cache value in {} with key {}: {}", cacheName, key, e.getMessage());
+            log.warn("Failed to cache value in {} with key {}: {}", "series-list", key, e.getMessage());
         }
     }
 
@@ -652,7 +682,6 @@ public class SeriesService {
             var cache = cacheManager.getCache(cacheName);
             if (cache != null) {
                 cache.evict(key);
-                log.debug("Evicted cache entry: {} - {}", cacheName, key);
             }
         } catch (Exception e) {
             log.warn("Failed to evict cache entry {} from {}: {}", key, cacheName, e.getMessage());
@@ -661,8 +690,7 @@ public class SeriesService {
 
     @Async("imageProcessingExecutor")
     public CompletableFuture<Void> startMultipleImagesProcessingWithProgress(String sessionId, Long seriesId, List<SeriesController.ImageData> imageDataList, String name, int year) {
-        log.info("🚀 Starting SSE multiple images processing session: {} for series ID: {} with {} images",
-                sessionId, seriesId, imageDataList.size());
+        log.info("🚀 Starting image processing session: {} for series '{}' with {} images", sessionId, name, imageDataList.size());
 
         try {
             int timeoutSeconds = 20;
@@ -670,49 +698,42 @@ public class SeriesService {
             int waited = 0;
 
             while (!progressService.emitterIsPresent(sessionId)) {
-                log.warn("Session {} has no emitter yet!", sessionId);
                 if (waited >= timeoutSeconds * 1000) {
                     throw new RuntimeException("Timeout: Emitter for sessionId " + sessionId + " not found after " + timeoutSeconds + " seconds.");
                 }
-
                 Thread.sleep(intervalMs);
                 waited += intervalMs;
             }
 
-            // Stage 1: Series validation (quick)
+            // Stage 1: Series validation
             progressService.updateProgress(new ProgressUpdateRequest(
                     sessionId, "preparing", 2,
                     String.format("Validating series and %d images...", imageDataList.size())));
 
-            Series seriesEntity = getSeriesById(seriesId); // Use cached method
+            Series seriesEntity = getSeriesById(seriesId);
             if (seriesEntity == null) {
                 progressService.sendError(sessionId, "Series not found with id: " + seriesId);
                 return CompletableFuture.completedFuture(null);
             }
 
-            log.info("📚 Processing series: '{}' ({}) with {} images",
-                    seriesEntity.getName(), seriesEntity.getStartYear(), imageDataList.size());
-
             List<GCDCover> candidateCovers;
 
             if (seriesEntity.getCachedCoverUrls() != null && !seriesEntity.getCachedCoverUrls().isEmpty() && seriesEntity.getLastCachedCovers() != null) {
-                log.info("Using cached images for session: {}", sessionId);
+                log.info("Using cached covers for session: {}", sessionId);
                 progressService.updateProgress(new ProgressUpdateRequest(
                         sessionId, "preparing", 8, "Using cached cover data..."));
                 candidateCovers = seriesEntity.getCachedCoverUrls();
             } else {
-                // Stage 2: ComicVine search (medium effort)
+                // Stage 2: ComicVine search
                 progressService.updateProgress(new ProgressUpdateRequest(
                         sessionId, "preparing", 5, "Searching ComicVine database..."));
 
-                log.info("🦸 Starting ComicVine search for series: {} (session: {})", seriesId, sessionId);
-                List<ComicVineService.ComicVineIssueDto> results = searchComicVineIssues(seriesId); // Uses cache
+                List<ComicVineService.ComicVineIssueDto> results = searchComicVineIssues(seriesId);
 
                 progressService.updateProgress(new ProgressUpdateRequest(
                         sessionId, "preparing", 8,
                         String.format("Found %d ComicVine issues for %d input images",
                                 results.size(), imageDataList.size())));
-                log.info("🦸 ComicVine completed: Found {} issues (session: {})", results.size(), sessionId);
 
                 candidateCovers = results.stream()
                         .flatMap(issue -> {
@@ -741,60 +762,32 @@ public class SeriesService {
                         })
                         .collect(Collectors.toList());
 
-                log.info("Comic vine has {} GCDCovers (session: {})", candidateCovers.size(), sessionId);
+                log.info("Generated {} candidate covers for session: {}", candidateCovers.size(), sessionId);
 
                 // Cache the covers and update cache
                 seriesEntity.setCachedCoverUrls(candidateCovers);
                 seriesRepository.save(seriesEntity);
-
-                // Evict the cached series to ensure fresh data
                 evictCacheValue("series", seriesId.toString());
             }
 
-            // Stage 3: Hand off to Python for the heavy work (10% -> 100%)
+            // Stage 3: Hand off to Python for processing
             progressService.updateProgress(new ProgressUpdateRequest(
                     sessionId, "preparing", 10,
                     String.format("Sending %d images with %d candidates to image matcher...",
                             imageDataList.size(), candidateCovers.size())));
 
-            // Let Python handle ALL remaining progress from 10% -> 100%
             JsonNode result = sendMultipleImagesToMatcherWithProgress(sessionId, imageDataList, candidateCovers, seriesEntity);
-
-            log.info("✅ SSE multiple images processing completed for session: {}", sessionId);
 
             if (result == null) {
                 log.warn("⚠️ No result received from Python for session: {}", sessionId);
                 progressService.sendError(sessionId, "No results returned from Python image processing");
-            }
-
-            log.info("📋 Received result from Python for session: {}, Python controls completion timing", sessionId);
-
-            // Log the result structure for debugging
-            log.info("🔍 Result structure for session {}: has results={}, has top_matches={}, has summary={}",
-                    sessionId,
-                    result != null && result.has("results"),
-                    result != null && result.has("top_matches"),
-                    result != null && result.has("summary"));
-
-            if (result != null && result.has("results")) {
-                JsonNode resultsArray = result.get("results");
-                log.info("🔍 Results array size for session {}: {}", sessionId, resultsArray.size());
-
-                // Log first few results for debugging
-                for (int i = 0; i < Math.min(3, resultsArray.size()); i++) {
-                    JsonNode imageResult = resultsArray.get(i);
-                    log.info("🔍 Image result {}: name={}, matches={}",
-                            i,
-                            imageResult.has("image_name") ? imageResult.get("image_name").asText() : "unknown",
-                            imageResult.has("top_matches") ? imageResult.get("top_matches").size() : 0);
-                }
+            } else {
+                log.info("✅ Image processing completed for session: {}", sessionId);
             }
 
         } catch (Exception e) {
-            log.error("❌ Error in SSE multiple images processing for session {}: {}", sessionId, e.getMessage());
+            log.error("❌ Error in image processing for session {}: {}", sessionId, e.getMessage());
             progressService.sendError(sessionId, "Error processing images: " + e.getMessage());
-        } finally {
-            log.info("🔚 Multiple images processing method completed for session: {}", sessionId);
         }
 
         return CompletableFuture.completedFuture(null);
@@ -803,9 +796,8 @@ public class SeriesService {
     private JsonNode sendMultipleImagesToMatcherWithProgress(String sessionId, List<SeriesController.ImageData> imageDataList,
                                                              List<GCDCover> candidateCovers, Series seriesEntity) {
         try {
-            log.info("📤 Preparing Flask SSE multiple images matcher request for session: {}...", sessionId);
-            log.info("    Images: {} files", imageDataList.size());
-            log.info("    ✅ Candidate covers: {}", candidateCovers.size());
+            log.info("📤 Sending {} images with {} candidates to matcher service for session: {}",
+                    imageDataList.size(), candidateCovers.size(), sessionId);
 
             MultipartBodyBuilder builder = new MultipartBodyBuilder();
 
@@ -825,7 +817,6 @@ public class SeriesService {
             try {
                 String candidateCoversJson = mapper.writeValueAsString(candidateCovers);
                 builder.part("candidate_covers", candidateCoversJson);
-                log.info("📤 Sending {} candidate covers as JSON (session: {})", candidateCovers.size(), sessionId);
             } catch (JsonProcessingException e) {
                 log.error("❌ Failed to serialize candidate covers to JSON: {}", e.getMessage());
                 return null;
@@ -833,20 +824,16 @@ public class SeriesService {
 
             // Add session ID so Python can report progress directly
             builder.part("session_id", sessionId);
-
-            // Add metadata for better debugging
             builder.part("series_name", seriesEntity.getName());
             builder.part("series_start_year", seriesEntity.getStartYear().toString());
             builder.part("total_candidates", String.valueOf(candidateCovers.size()));
             builder.part("total_images", String.valueOf(imageDataList.size()));
             builder.part("urls_scraped", "true");
 
-            log.info("📤 Sending request to multiple images matcher service (session: {})...", sessionId);
             long startTime = System.currentTimeMillis();
 
-            // Use different endpoint for multiple images
             String response = webClient.post()
-                    .uri("/image-matcher-multiple") // Different endpoint for multiple images
+                    .uri("/image-matcher-multiple")
                     .contentType(MediaType.MULTIPART_FORM_DATA)
                     .body(BodyInserters.fromMultipartData(builder.build()))
                     .retrieve()
@@ -854,15 +841,15 @@ public class SeriesService {
                     .block();
 
             long duration = System.currentTimeMillis() - startTime;
-            log.info("📥 Multiple images matcher response received in {}ms (session: {})", duration, sessionId);
+            log.info("📥 Matcher response received in {}ms for session: {}", duration, sessionId);
 
             JsonNode root = mapper.readTree(response);
-            JsonNode results = root.get("results"); // Expecting array of results for each image
+            JsonNode results = root.get("results");
 
             if (results != null && results.isArray()) {
-                log.info("🎯 Multiple images matcher found results for {} images (session: {})", results.size(), sessionId);
+                log.info("🎯 Matcher found results for {} images (session: {})", results.size(), sessionId);
             } else {
-                log.warn("⚠️ No results found in multiple images response (session: {})", sessionId);
+                log.warn("⚠️ No results found in matcher response (session: {})", sessionId);
             }
 
             return root;
